--- a/assets/css/syle.css
+++ b/assets/css/syle.css
@@ -8,7 +8,7 @@
 :root {
     --cor-primaria: black;
     --cor-secundaria: #F6F6F6;
-    --cor-terceiaria: #22D4FD;
+    --cor-terceiaria: #ff0101;
     --cor-hover: #272727;
 }
 
@@ -84,7 +84,7 @@ body{
     width: 280px;
     text-align: center;
     border-radius: 8px;
-    border: 2px solid #22D4FD;
+    border: 2px solid var(--cor-secundaria);
     font-size: 24px;
     font-weight: 600;
     padding: 21.5px 0;
@@ -101,7 +101,7 @@ body{
     color: #000000;
     padding: 24px;
     text-align: center;
-    background-color: #22D4FD;
+    background-color: var(--cor-secundaria);
     font-size: 24px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
