redid the structures of images and texts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 :root {
     --cor-primaria: black;
     --cor-secundaria: #F6F6F6;
-    --cor-terceiaria: #ff0101;
+    --cor-terceiaria: #22D4FD;
     --cor-hover: #272727;
 }
 
